# Clean-Universal-DLL-Loader

./: CMakeLists.txt  IPlugin.h  PluginLoader.cpp  PluginLoader.h  README.md
proxy/: ProxyCore.cpp  ProxyCore.h  dllmain_dinput8.cpp  dllmain_dsound.cpp  dllmain_universal.cpp  dllmain_version.cpp  dllmain_winmm.cpp  proxy_dinput8.asm  proxy_dinput8.cpp  proxy_dinput8.def  proxy_dsound.asm  proxy_dsound.cpp  proxy_dsound.def  proxy_universal.asm  proxy_universal.cpp  proxy_universal.def  proxy_version.asm  proxy_version.cpp  proxy_version.def  proxy_winmm.asm  proxy_winmm.cpp  proxy_winmm.def
